# WeatherPredictor

./: README.md  演示.txt
47-源码/weather_predictor/: cityinfo.h  decompressGzip.h  followmousewidget.cpp  followmousewidget.ui  main.cpp  mywidget.ui  weathereachday.h
47-源码/weather_predictor/images/: multiweather.cpp
Weather-main004(1)/: 001.qrc  CMakeLists.txt  cityinfo.cpp  cityinfo.h  main.cpp  mywidget.cpp  mywidget.h  mywidget.ui  search_box.cpp  search_box.h  search_box.ui  weathereachday.cpp  weathereachday.h
Weather-main004(1)/images/: 按钮1-000.psd
weather_predictor/: CMakeLists.txt  cityinfo.cpp  decompressGzip.cpp  followmousewidget.cpp  followmousewidget.h  followmousewidget.ui  images.qrc  mywidget.cpp  mywidget.h  search_box.cpp  search_box.h  search_box.ui  weather.json.txt  weathereachday.cpp  weatherrealtime.cpp  weatherrealtime.h
weather_predictor/images/: multiweather.h  multiweather.ui
